--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(cpp-test
 target_include_directories(cpp-test PUBLIC
   # list of include directories:
   ${CMAKE_SOURCE_DIR}/include
+  ${CMAKE_SOURCE_DIR}/libs
   )
 
 # Any dependent libraires needed to build this target.
