Updated github workflow

--- a/.github/workflows/run-unit-test-and-upload-codecov.yml
+++ b/.github/workflows/run-unit-test-and-upload-codecov.yml
@@ -56,6 +56,9 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
           files: ${{github.workspace}}/build/test_coverage.info
+          flags: unittests
+          name: codecov-umbrella
+          yml: ./codecov.yml # optional
           fail_ci_if_error: true # optional (default = false)
           verbose: true # optional (default = false)      
           
